Upgrade our basic repo to 6000

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,14 +1,15 @@
 {
   "dependencies": {
     "com.inworld.unity.core": "file:../Assets/Inworld/com.inworld.unity.core-3.7.0.tgz",
-    "com.unity.collab-proxy": "2.5.1",
-    "com.unity.feature.development": "1.0.1",
-    "com.unity.inputsystem": "1.11.0",
-    "com.unity.sentis": "1.5.0-pre.3",
-    "com.unity.shadergraph": "14.0.11",
-    "com.unity.timeline": "1.7.6",
-    "com.unity.ugui": "1.0.0",
+    "com.unity.collab-proxy": "2.5.2",
+    "com.unity.feature.development": "1.0.2",
+    "com.unity.inputsystem": "1.11.2",
+    "com.unity.multiplayer.center": "1.0.0",
+    "com.unity.shadergraph": "17.0.3",
+    "com.unity.timeline": "1.8.7",
+    "com.unity.ugui": "2.0.0",
     "com.unity.visualscripting": "1.9.4",
+    "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
