Solve header first

--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -96,6 +96,7 @@ header:
     - '**/*.yml'
     - '**/*.config'   
     - '**/*.editorconfig'     
+    - '**/*.mixer'  
     
   comment: on-failure
 
