--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,9 +1,10 @@
 {
   "dependencies": {
-    "com.inworld.unity.core": "file:../Assets/Inworld/com.inworld.unity.core-3.8.0.tgz",
+    "com.inworld.unity.core": "file:../Assets/Inworld/com.inworld.unity.core-3.8.1.tgz",
     "com.unity.collab-proxy": "2.5.2",
     "com.unity.feature.development": "1.0.2",
     "com.unity.inputsystem": "1.11.2",
+    "com.unity.sentis": "2.1.2",
     "com.unity.shadergraph": "17.0.3",
     "com.unity.timeline": "1.8.7",
     "com.unity.ugui": "2.0.0",
