exclude assets folders's head checker

--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -61,6 +61,9 @@ header:
     - '**/src/main/fbs/istio/**'
     - '**/src/main/proto/envoy/**'
     - '**/src/main/proto/udpa/**'
+    - '**/Assets/Inworld/Inworld.Assets/**'
+    - '**/Assets/Inworld/Inworld.Native/**'
+    - '**/Assets/Inworld/Inworld.Samples/**'
     - '**/src/main/proto/google/**'
     - '**/src/main/proto/istio/**'
     - '**/src/main/proto/jaeger/**'
