--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -32,6 +32,7 @@ header:
     - '.github/PULL_REQUEST_TEMPLATE'
     - '.github/builds/free.sh'
     - '**/.gitignore'
+    - '**/.gitattributes'
     - '.gitmodules'
     - '.lift'
     - '.mvn'
@@ -43,6 +44,8 @@ header:
     - 'dist-material/release-docs'
     - '**/*.md'
     - '**/*.json'
+    - '**/*.png'
+    - '**/*.ttf'
     - '**/*.ftl'
     - '**/target/**'
     - '**/*.iml'
@@ -63,7 +66,6 @@ header:
     - '**/src/main/proto/udpa/**'
     - '**/Assets/Inworld/Inworld.Assets/**'
     - '**/Assets/Inworld/Inworld.Native/**'
-    - '**/Assets/Inworld/Inworld.Samples/**'
     - '**/src/main/proto/google/**'
     - '**/src/main/proto/istio/**'
     - '**/src/main/proto/jaeger/**'
