--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -46,6 +46,8 @@ header:
     - '**/*.json'
     - '**/*.png'
     - '**/*.ttf'
+    - '**/*.FBX'
+    - '**/*.fbx'
     - '**/*.ftl'
     - '**/target/**'
     - '**/*.iml'
