add tmp in the package manifest

--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -47,6 +47,7 @@ header:
     - '**/*.png'
     - '**/*.ttf'
     - '**/*.FBX'
+    - '**/*.inputactions'
     - '**/*.fbx'
     - '**/*.ftl'
     - '**/target/**'
